# cis194-haskell

./: .gitignore  README.md  baby.hs
week1/: CreditCard.hs
week2/: HW02.hs  lecture.hs
week3/: HW03.hs  lecture.hs
week4/: HW04.hs  lecture.hs
week5/: HW05.hs  shell.nix  week5.cabal
