cabal-version:      2.4
name:               week5
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable week5
    main-is:          HW05.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1.1.0,
        text ^>=2.0.1

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
