cabal-version:      2.4
name:               week5
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:
maintainer:

executable week5
    main-is: HW05.hs
    -- https://stackoverflow.com/q/27591266
    ghc-options: -main-is HW05

    -- Modules included in this executable, other than Main.
    other-modules:
        Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.16.4.0,
        bytestring ^>= 0.11.3.1,
        containers ^>= 0.6.5.1,
        aeson ^>= 2.1.1.0,
        text ^>= 2.0.1

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
